--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
@@ -18,5 +18,30 @@
       href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"
     />
   </head>
-  <body></body>
+  <body>
+    <ion-app>
+      <ion-header>
+        <ion-toolbar color="primary">
+          <ion-title>Budget Planner</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>New Expense</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-item>
+              <ion-label position="floating">Expense Reason</ion-label>
+              <ion-input type="text"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Expense Reason</ion-label>
+              <ion-input type="number"></ion-input>
+            </ion-item>
+          </ion-card-content>
+        </ion-card>
+      </ion-content>
+    </ion-app>
+  </body>
 </html>
