--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
@@ -26,22 +26,39 @@
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>New Expense</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-item>
-              <ion-label position="floating">Expense Reason</ion-label>
-              <ion-input type="text"></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label position="floating">Expense Reason</ion-label>
-              <ion-input type="number"></ion-input>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
+        <ion-grid>
+          <ion-row>
+            <ion-col size-md="6" offset-md="3">
+              <ion-card>
+                <ion-card-header>
+                  <ion-card-title>New Expense</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-item>
+                    <ion-label position="floating">Expense Reason</ion-label>
+                    <ion-input type="text" id="input-reason"></ion-input>
+                  </ion-item>
+                  <ion-item>
+                    <ion-label position="floating">Expense Amount</ion-label>
+                    <ion-input type="number" id="input-amount"></ion-input>
+                  </ion-item>
+                  <div class="ion-margin-vertical ion-text-right">
+                    <ion-button shape="round" color="danger" id="btn-cancel">
+                      <ion-icon slot="start" name="close"></ion-icon>
+                      Clear</ion-button
+                    >
+                    <ion-button shape="round" id="btn-confirm">
+                      <ion-icon slot="start" name="add"></ion-icon>
+                      Add Expense</ion-button
+                    >
+                  </div>
+                </ion-card-content>
+              </ion-card>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
       </ion-content>
     </ion-app>
+    <script src="app.js"></script>
   </body>
 </html>
