58. Creating Ionic Elements Programmatically

--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
@@ -56,6 +56,11 @@
               </ion-card>
             </ion-col>
           </ion-row>
+          <ion-row>
+            <ion-col>
+              <ion-list id="expenses-list"></ion-list>
+            </ion-col>
+          </ion-row>
         </ion-grid>
       </ion-content>
     </ion-app>
