59. Finishing Up the Base JavaScript Logic

--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
@@ -61,6 +61,11 @@
               <ion-list id="expenses-list"></ion-list>
             </ion-col>
           </ion-row>
+          <ion-row>
+            <ion-col>
+              <p>Total Expenses: <span id="total-expenses"></span></p>
+            </ion-col>
+          </ion-row>
         </ion-grid>
       </ion-content>
     </ion-app>
