--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
@@ -57,13 +57,15 @@
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col>
+            <ion-col size-md="6" offset-md="3">
               <ion-list id="expenses-list"></ion-list>
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col>
-              <p>Total Expenses: <span id="total-expenses"></span></p>
+            <ion-col size-md="6" offset-md="3">
+              <p class="ion-padding">
+                Total Expenses: <span id="total-expenses"></span>
+              </p>
             </ion-col>
           </ion-row>
         </ion-grid>
