--- a/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
+++ b/udemy/Ionic - Build iOS, Android & Web Apps with Ionic & Angular/ionic-angular-course/index.html
@@ -70,6 +70,7 @@
           </ion-row>
         </ion-grid>
       </ion-content>
+      <ion-alert></ion-alert>
     </ion-app>
     <script src="app.js"></script>
   </body>
